style/common.css
html {
    height: 100%;
    font-size: 10px;
}
body, div, p, ul, li, input, textarea, h1, h2, h3 {
    margin: 0;
    padding: 0;
}
body, input, textarea {
    font-family: 'MozTT';
}
body {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    background: #fff;
}
progress.pack-activity {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
}

section[role="region"] > header:first-child input[type="text"] {
    position: absolute;
    top: 0;
    left: 0;
    font-size: 2.5rem;
    font-weight: bold;
    line-height: 4.8rem;
    width: 100%;
    height: 100%;
    background: transparent;
    border: none;
    color: #fff;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    display: none;
    padding: 0 8.6rem 0 2.9rem;
}
section[role="region"].edit-title > header:first-child h1 {
    display: none;
}
section[role="region"].edit-title > header:first-child input[type="text"] {
    display: block;
    z-index: 50;
}
section[role="region"] > header:first-child menu[type="toolbar"] {
    position: relative;
    z-index: 100;
}

.card .footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 4rem;
    line-height: 4rem;
    z-index: 7;
    color: #fff;
    text-align: center;
    background: rgba(0, 0, 0, .8);
}
    .card .footer b {
        position: absolute;
        top: 0;
        bottom: 0;
        width: 4rem;
        font-size: 0;
        text-indent: -10rem;
        cursor: pointer;
    }
    .card .footer .bottomleft {
        left: 0.5rem;
    }
    .card .footer .bottomright {
        right: 1rem;
    }
    .card .footer select {
        position: absolute;
        bottom: 0;
        right: 0;
        width: 5rem;
        height: 4rem;
        opacity: 0;
    }

.card > .content {
    position: absolute;
    top: 4.9rem;
    bottom: 0;
    left: 0;
    right: 0;
    padding-bottom: 4rem;
    z-index: 5;
    overflow-y: auto;
}

.notebook-notes {
    list-style-type: none;
    min-height: 100%;
    padding-bottom: 4rem;
}
    .notebook-notes li {
        position: relative;
        font-size: 1.3rem;
        min-height: 2.1rem;
        overflow: hidden;
        padding: 1.2rem 4rem 1.2rem 2rem;
        border-bottom: 0.1rem solid #dbd9d9;
        cursor: pointer;
    }
        .notebook-notes li .title {
            font-size: 1.8rem;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
        .notebook-notes li .time {
            font-size: 1.3rem;
            color: #666;
        }
        .notebook-notes li .image {
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            width: 3rem;
            background-size: cover;
            background-position: 0 50%;
            background-repeat: no-repeat;
        }
        .notebook-notes li b {
            font-weight: bold;
        }

#note {

}
#note.card > .content {
    top: 8.5rem;
}
#note.card > .footer {
    display: none;
}
    #note #note-content, #note .demo-content {
        background: transparent;
        border: none;
        width: 100%;
        min-height: 25rem;
        padding: 2rem;
        line-height: 130%;
        font-size: 1.6rem;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }
    #note .demo-content {
        position: absolute;
        top: 0;
        left: 0;
        z-index: 0;
        pointer-events: none;
        opacity: 0;
    }
    #note.show-empty #note-content {
    }
    #note.has-images #note-content {
    }
    #note #note-resources {
        list-style-type: none;
        color: #2c2c2c;
        font-size: 1.3rem;
        margin: 0 1.5rem 1.5rem 1.5rem;
    }
        #note #note-resources li {
            position: relative;
            margin-top: 1.5rem;
        }

        #note #note-resources .image {
            height: 6rem;
            padding-left: 9rem;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
        }
            #note #note-resources .image:before {
                content: "";
                background: transparent url('../images/attachment.png') no-repeat;
                background-size: 0.9rem 2.1rem;
                position: absolute;
                top: 0;
                left: 7rem;
                width: 0.9rem;
                height: 2.1rem;
            }
            #note #note-resources .image span {
                position: absolute;
                top: 0;
                left: 0;
                width: 6rem;
                height: 6rem;
                background-position: 50% 50%;
                background-repeat: no-repeat;
                background-size: cover;
            }

    #note #button-note-save {
        opacity: 0;
        pointer-events: none;
        -moz-transition: opacity 150ms linear;
        transition: opacity 150ms linear;
    }
    #note #button-note-save.visible {
        opacity: 1;
        pointer-events: inherit;
    }

#note.card.readonly > .content {
    top: 4.9rem;
}
    #note.readonly #note-edit-actions {
        display: none;
    }
    #note.readonly #button-note-save {
        display: none;
    }
    #note.readonly #note-content {
        pointer-events: none;
    }
    #note.readonly > .footer {
        display: block;
    }

#note-edit-actions {
    position: absolute;
    top: 4.9rem;
    left: 0;
    right: 0;
    list-style-type: none;
    background: #c9c7c7;
    border-bottom: 0.1rem solid #c9c7c7;
}
    #note-edit-actions:after {
        display: list-item;
        float: none;
        clear: both;
        height: 0;
        width: 0;
    }
/* ... */

